IFAWS-1742: Reapply customizations from IFAWS-1671, DC testing 2023
Squashed rebased commits:
IFAWS-1671: Adjust target user group name for Jira

NOTE: Not fully clarified, but looks like the add-user-to-group script was only ever used for Bamboo, as the implied REST endpoints do not exist for Jira, hence this on the fly adaption to a reliably existing group in the Jira test data set - we should lift this to a parameter eventually. (+24 squashed commit)

Squashed commit:

[edd8345] IFAWS-1671: Re-apply custom script unification from last Bamboo testing round

[245c90d] IFAWS-1570: Switch from Jira ProjectsList to Dashboard page for selenium tests

NOTE: Other than Bamboo's ProjectList, Jira's  ProjectsList requires parameters, hence using a more generic one.

[ed6ef0a] IFAWS-1570: Fix copy and paste error of config.percentage name using Bamboo specific string

[e4a792e] IFAWS-1570: Fix custom setting addition for connector id not correctly transferred to Jira

[d6af440] IFAWS-1570: Fix erroneous import declaration

[d0caf9d] IFAWS-1570: Add selenium custom action

NOTE: Semantic transfer of single action from Bamboo testing approach, with less need for toolkit fixing

[6f10deb] IFAWS-1570: Add locust custom actions

NOTE: Semantic transfer of two actions from Bamboo testing approach, with less need for toolkit fixing

[1d8e54c] IFAWS-1570,TAWS-2214: Generalize create-ifaws-connectors script to allow for arbitrary account/connector creation numbers

NOTE: Cherry picked from commit f2463999b878e1ae94bf734920560756b4f3727d, as we do not want the TAWS specific reverts of the IFAWS test instrumentation, but we do want this tweak of the connector creation logic.

[45589a1] IFAWS-1573: Disable JMeter specific custom test execution

NOTE: Misinterpretation in earlier commit, as this is indeed only for JMeter as the comment suggests.

[53f608c] IFAWS-1573: Kludge custom REST calls running into Bamboo session timeout on full test duration by enforcing a fresh login each time


--- a/app/jira.yml
+++ b/app/jira.yml
@@ -36,6 +36,7 @@ settings:
     view_backlog: 6
     browse_boards: 1
     standalone_extension: 0 # By default disabled
+    ifaws_connector_id: TODO-VALID-UUID  # Custom tests require a valid connecotr id, defined here for centralization
     # Custom dataset section.
     custom_dataset_query:          # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
