--- a/app/bamboo.yml
+++ b/app/bamboo.yml
@@ -6,8 +6,8 @@ settings:
   check-updates: false    # disable bzt check for updates
   env:
     application_hostname: test-bamboo.atlassian.com   # Bamboo DC hostname without protocol and port e.g. test-bamboo.atlassian.com or localhost
-    application_protocol: http         # http or https
-    application_port: 80               # 80, 443, 8085, etc
+    application_protocol: https         # http or https
+    application_port: 443               # 80, 443, 8085, etc
     secure: True                       # Set False to allow insecure connections, e.g. when using self-signed SSL certificate
     application_postfix: /bamboo       # e.g. /bamboo in case of url like http://localhost/bamboo
     admin_login: admin
@@ -28,9 +28,10 @@ settings:
     view_job_configuration: 10
     view_build_summary: 10
     view_projects_list: 10
-    standalone_extension: 0            # Standalone extension weight for JMeter. By default, disabled. Set appropriate weight to enable.
+    standalone_extension: 1            # Standalone extension weight for JMeter. By default, disabled. Set appropriate weight to enable.
     # Locust app specific
-    standalone_extension_locust: 0     # Standalone extension weight for Locust. By default, disabled. Set 1 to enable.
+    standalone_extension_locust: 1     # Standalone extension weight for Locust. By default, disabled. Set 1 to enable.
+    ifaws_connector_id: TODO-VALID-UUID  # Custom tests require a valid connecotr id, defined here for centralization
     # Bamboo agents and plans settings
     number_of_agents: 50               # number of available remote agents
     parallel_plans_count: 40           # number of parallel plans execution
@@ -62,11 +63,11 @@ execution:
     hold-for: ${test_duration}
     ramp-up: ${default_dataset_plan_duration}
 ## Locust app-specific scenario. Uncomment below lines to enable.
-#  - scenario: locust_app_specific
-#    executor: locust
-#    concurrency: ${concurrency}
-#    hold-for: ${test_duration}
-#    ramp-up: ${ramp-up}
+  - scenario: locust_app_specific
+    executor: locust
+    concurrency: ${concurrency}
+    hold-for: ${test_duration}
+    ramp-up: ${ramp-up}
   - scenario: selenium
     executor: selenium
     runner: pytest
