TAWS-2214: Revert custom locust test additions made for IFAWS
NOTE: Semantic revert of the additions only, keeping small fixes in other toolkit parts like removing the bamboo_login measure in case we need them again.

--- a/app/bamboo.yml
+++ b/app/bamboo.yml
@@ -29,7 +29,7 @@ settings:
     view_projects_list: 10
     standalone_extension: 0            # Standalone extension weight for JMeter. By default, disabled. Set appropriate weight to enable.
     # Locust app specific
-    standalone_extension_locust: 1     # Standalone extension weight for Locust. By default, disabled. Set 1 to enable.
+    standalone_extension_locust: 0     # Standalone extension weight for Locust. By default, disabled. Set 1 to enable.
     ifaws_connector_id: TODO-VALID-UUID  # Custom tests require a valid connecotr id, defined here for centralization
     # Bamboo agents and plans settings
     number_of_agents: 50               # number of available remote agents
@@ -62,11 +62,11 @@ execution:
     hold-for: ${test_duration}
     ramp-up: ${default_dataset_plan_duration}
 ## Locust app-specific scenario. Uncomment below lines to enable.
-  - scenario: locust_app_specific
-    executor: locust
-    concurrency: ${concurrency}
-    hold-for: ${test_duration}
-    ramp-up: ${ramp-up}
+  # - scenario: locust_app_specific
+  #   executor: locust
+  #   concurrency: ${concurrency}
+  #   hold-for: ${test_duration}
+  #   ramp-up: ${ramp-up}
   - scenario: selenium
     executor: selenium
     runner: pytest
